# Step1

./: CMakeLists.txt  LICENSE  Makefile  README.md  integrate.f90  kinds.f90  main.f90  output.f90  project.md  system.f90
lammps/: Ar.in  Ar.in_new
pages/: index.md  todo.md
scripts/: compareThermo.py  compareVelocity.py  drawBox.py  plotE.py  plotE1.py  plotlmp.py  post.py  readE1.py  view.pml
src/: autodiff.f90  integrate.f90  kinds.f90  lmpIntegrator.f90  main.f90  output.f90  plplotlib.f90  progress.f90  properties.f90  settings.f90  system.f90  units.f90  utilities.f90
